feat: agregar NavBar y PageModule, y actualizar estilos en SmarPhoneCard

--- a/src/_components/SmarPhoneCard.module.css
+++ b/src/_components/SmarPhoneCard.module.css
@@ -3,6 +3,7 @@
   overflow: hidden; /* Asegura que el contenido no se desborde */
   position: relative;
   border: 1px solid #ccc;
+  cursor: pointer;
 }
 
 .container::after {
