--- a/src/_components/SmarPhoneCard.module.css
+++ b/src/_components/SmarPhoneCard.module.css
@@ -32,6 +32,15 @@
   }
 }
 
+.imageContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 344px;
+  height: 344px;
+}
+
 .image {
   position: relative !important;
   z-index: 1 !important;
@@ -46,7 +55,7 @@
   margin: 0;
   padding: 0;
   text-transform: uppercase;
-  font-family: 'Helvetica Neue';
+  font-family: 'Helvetica';
   font-weight: 300;
   font-size: 10px;
   color: rgba(121, 115, 109, 1);
@@ -60,7 +69,7 @@
 .container h2 {
   margin: 0;
   padding: 0;
-  font-family: 'Helvetica Neue';
+  font-family: 'Helvetica';
   font-weight: 300;
   font-size: 12px;
   color: rgba(0, 0, 0, 1);
@@ -79,11 +88,11 @@
 }
 
 .loader {
-  width: 324px;
-  height: 257px;
+  width: 200px;
   background: linear-gradient(90deg, #d6d6d6 20%, #ffffff 50%, #d6d6d6 80%);
   background-size: 200% 100%;
   animation: shimmer 1.5s infinite;
+  border: #ccc 1px solid;
 }
 
 @keyframes shimmer {
