feat: implementar búsqueda de smartphones con debounce, refactorizar componentes y eliminar código no utilizado

--- a/src/CSS.modules/SmartPhoneGrid.module.css
+++ b/src/CSS.modules/SmartPhoneGrid.module.css
@@ -1,6 +1,7 @@
 .gridContainer {
   display: grid;
   gap: 0px;
+  padding: 0px 48px 0px 48px;
 
   /* Estilos para el contenedor de la cuadrícula */
 }
