--- a/src/CSS.modules/SmartPhoneGrid.module.css
+++ b/src/CSS.modules/SmartPhoneGrid.module.css
@@ -23,3 +23,12 @@
     grid-template-columns: repeat(1, 1fr); /* 1 columna para móvil */
   }
 }
+
+.gridContainerPersonalized {
+  display: grid;
+  gap: 0px;
+  padding: 0px 48px 0px 48px;
+  grid-template-columns: repeat(6, 1fr);
+
+  /* Estilos para el contenedor de la cuadrícula */
+}
